<resources>
    <string name="app_name">MovieApp</string>
    <string name="search_text">Movie name</string>
    <string name="search_hint">E.g: Batman</string>
    <string name="submit_text">Submit</string>
    <string name="movie_name">Movie Title</string>
    <string name="release_date">Released Date: %s</string>
    <string name="budget">Budget: %s</string>
    <string name="budget2">Budget: %1$s%2$s</string>
    <string name="runtime">Runtime: %1$s%2$s</string>
    <string name="status">Status: %s</string>
    <string name="overview">Overview: %s</string>
    <string name="overview2">Overview: n/a</string>
    <string name="tag">Tag: %s</string>
    <string name="genre">Category:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="categories">Categories: %s</string>
    <string name="load_picture">%1$s%2$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="film">Films</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="refresh">Refresh </string>
    <string name="idValue">111</string>
    <string name="profile">Profile</string>
    <string name="registration">Registration</string>
    <string name="edit_email">e.g: bla@gmail.com</string>
    <string name="password">Password:</string>
    <string name="name">Name:</string>
    <string name="name_profile">e.g: Pedro</string>
    <string name="email">Email:</string>
    <string name="sign_out">Sign Out</string>
    <string name="name_error">Please enter name</string>
    <string name="email_error">Please enter email</string>
    <string name="password_error">Please enter password</string>

    <string name="hello">Hello %1$s!</string>
    <string name="email_info">Email: %1$s</string>
    <string name="settings">Settings</string>
    <string name="languages">Language Settings</string>
    <string name="en_language">Select language</string>
    <string name="english">Language</string>
    <string name="complete">Complete the following items:</string>
    <string name="runtime_value">Runtime in minutes</string>
    <string name="year">Year</string>
    <string name="vote_count">Vote Count</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="favorite_list">Favorite List</string>
    <string name="detail_info">Detail info</string>

</resources>
