<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@android:drawable/ic_lock_power_off"
            android:id="@+id/nav_login"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_films"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/film" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings"/>
    </group>

</menu>
