<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vadym.movieapp.activities.ProfileActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="visible">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/titleReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/linearName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleReg"
            android:layout_marginTop="5dp"
            android:weightSum="2">

            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextNameProfile"
                android:layout_weight="1.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name_profile"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearName"
            android:layout_marginTop="5dp"
            android:weightSum="2">

            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextEmailReg"
                android:layout_width="0dp"
                android:layout_weight="1.6"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/edit_email"
                android:inputType="textEmailAddress"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearEmail"
            android:layout_marginTop="5dp"
            android:weightSum="2">

            <TextView
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextPasswordReg"
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textPassword"
                android:textStyle="italic"/>

        </LinearLayout>


        <Button
            android:id="@+id/btnReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/linearPassword"
            android:text="@string/submit"
            android:background="@color/colorAccent"
            android:textColor="@android:color/primary_text_dark"/>

    </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/profileSignOut"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/btnSignOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/sign_out"/>

            <TextView
                android:id="@+id/hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSignOut"
                android:textStyle="normal"
                android:text="@string/hello"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/emailInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hello"
                android:textStyle="normal"
                android:text="@string/email_info"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
