<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/botomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleDetailSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/complete"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/searchTitleDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleDetailSearch">

            <EditText
                android:id="@+id/runtimeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/runtime_value"
                android:inputType="number"
                android:textAlignment="center" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/searchYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchTitleDetail">

            <EditText
                android:id="@+id/yearEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                android:inputType="number"
                android:textAlignment="center" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/searchVote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchYear">

            <EditText
                android:id="@+id/voteCountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vote_count"
                android:inputType="numberDecimal"
                android:textAlignment="center" />

        </RelativeLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchVote"
            android:layout_centerHorizontal="true"
            android:text="@string/search" />
    </RelativeLayout>

</LinearLayout>