<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.vadym.movieapp.activities.MovieDetailsActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cardErrorView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/appBarLayout"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/error" />

                    <TextView
                        android:id="@+id/errorTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewDet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="invisible">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <FrameLayout
                        android:id="@+id/frameLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_toLeftOf="@id/movieInfo"
                        android:layout_toStartOf="@id/movieInfo">

                        <ImageView
                            android:id="@+id/movieImageDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY" />

                        <ImageButton
                            android:id="@+id/imageButtonDetail"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="end|top"
                            android:background="@drawable/ic_launcher_white" />

                    </FrameLayout>

                    <RelativeLayout
                        android:id="@+id/movieInfo"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true">

                        <TextView
                            android:id="@+id/movieTitleDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:text="@string/movie_name"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/movieGenreDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/movieTitleDetail"
                            android:paddingLeft="5dp"
                            android:text="@string/genre" />

                        <TextView
                            android:id="@+id/movieReleaseDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/movieGenreDetail"
                            android:paddingLeft="5dp"
                            android:text="@string/release_date" />

                        <TextView
                            android:id="@+id/movieBudgetDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/movieReleaseDetail"
                            android:paddingLeft="5dp"
                            android:text="@string/budget" />

                        <TextView
                            android:id="@+id/movieRuntimeDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/movieBudgetDetail"
                            android:paddingLeft="5dp"
                            android:text="@string/runtime" />

                        <TextView
                            android:id="@+id/movieStatusDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/movieRuntimeDetail"
                            android:paddingLeft="5dp"
                            android:text="@string/status" />

                    </RelativeLayout>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewDet2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardViewDet"
                android:layout_margin="10dp"
                android:background="@color/cardview_light_background"
                android:visibility="invisible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/overviewDet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/overview" />

                    <TextView
                        android:id="@+id/tagDet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/overviewDet"
                        android:padding="5dp"
                        android:text="@string/tag" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBarDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:visibility="visible" />


</RelativeLayout>
